--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,5 +10,6 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+Imports: rvest
 URL: https://github.com/vgherard/folgeR
 BugReports: https://github.com/vgherard/folgeR/issues
