--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,15 @@
 Package: folgeR
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Title: Client for the Folger Shakespeare Library API 
+Version: 0.0.1
+Authors@R: 
+    person(given = "Valerio",
+           family = "Gherardi",
+           role = c("aut", "cre"),
+           email = "vgherard@sissa.it",
+           comment = c(ORCID = "0000-0002-8215-3013"))
+Maintainer: Valerio Gherardi <vgherard@sissa.it>
+Description: Client for the Folger Shakespeare Library API
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
