--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Authors@R:
            email = "vgherard@sissa.it",
            comment = c(ORCID = "0000-0002-8215-3013"))
 Maintainer: Valerio Gherardi <vgherard@sissa.it>
-Description: Client for the Folger Shakespeare Library API
+Description: Client for the Folger Shakespeare Library API.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
@@ -18,5 +18,6 @@ Imports: rvest, rlang
 URL: https://github.com/vgherard/folgeR
 BugReports: https://github.com/vgherard/folgeR/issues
 Suggests: 
+    covr,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
