--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
-Imports: httr, rlang
+Imports: httr, xml2, rlang
 URL: https://github.com/vgherard/folgeR
 BugReports: https://github.com/vgherard/folgeR/issues
 Suggests: 
